--- a/src/MultiAlignRogue/AMTMatching/StacSettingsView.xaml
+++ b/src/MultiAlignRogue/AMTMatching/StacSettingsView.xaml
@@ -42,6 +42,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="35" />
                 </Grid.ColumnDefinitions>
 
                 <TextBox Grid.Row="0"
@@ -54,15 +55,25 @@
                                         Mode=TwoWay,
                                         NotifyOnSourceUpdated=True}"
                          TextWrapping="Wrap" />
+
+                <!-- Select Database Server -->
                 <Button Grid.Row="0"
                         Grid.Column="1"
                         Height="25"
                         Command="{Binding Path=DatabaseSelectionViewModel.SelectAMTCommand}"
                         Content="Select Database" />
+                
+                <!-- Select Database file -->
+                <Button Grid.Row="0"
+                        Grid.Column="2"
+                        Width="33"
+                        HorizontalAlignment="Right"
+                        Command="{Binding DatabaseSelectionViewModel.SelectTextFileCommand}" />
+
                 <ProgressBar Name="AmtTagDatabaseProgressBar"
                              Grid.Row="1"
                              Grid.Column="0"
-                             Grid.ColumnSpan="2"
+                             Grid.ColumnSpan="3"
                              Margin="0,5,0,0"
                              Visibility="{Binding Path=DatabaseSelectionViewModel.ShowMassTagProgress,
                                                   Converter={StaticResource BoolToVis}}"
