--- a/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
+++ b/src/MultiAlignRogue/Feature Finding/FeatureFindingSettings.xaml
@@ -398,14 +398,14 @@
                 Width="125"
                 Height="25"
                 HorizontalAlignment="Left"
-                Command="{Binding FindMSFeaturesCommand}">
+                Command="{Binding FindMsFeaturesCommand}">
             Load LCMS Features
         </Button>
         <Button Grid.Row="2"
                 Width="140"
                 Height="25"
                 HorizontalAlignment="Right"
-                Command="{Binding PlotMSFeaturesCommand}">
+                Command="{Binding PlotMsFeaturesCommand}">
             Plot Features
         </Button>
     </Grid>
